--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
-    "astro": "^5.5.3",
-    "nodemailer": "^6.10.0",
-    "resend": "^4.1.2",
+    "astro": "^5.5.5",
+    "gsap": "^3.12.7",
+    "imagesloaded": "^5.0.0",
+    "parcel": "^2.14.4",
+    "split-type": "^0.3.4",
     "tailwindcss": "^4.0.15"
   }
 }
