--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "astro-photo-gallery",
+  "name": "dariusblaszyk-com",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.17",
-    "astro": "^5.5.5",
-    "tailwindcss": "^4.0.17"
+    "@tailwindcss/vite": "^4.1.1",
+    "astro": "^5.5.6",
+    "tailwindcss": "^4.1.1"
   }
 }
